syntax = "proto3";

package file_service;
option go_package = "backend/post_service/internal/delivery/grpc/proto";
import "file.proto";

message Post {
  string id = 1;
  string creator_id = 2;
  string description = 3;
  repeated string images_url = 4;
  repeated File images = 5;
  string created_at = 6;
  string updated_at = 7;
  int64 like_count = 8;
  int64 repost_count = 9;
  int64 comment_count = 10;
  bool is_repost = 11;
}

message AddPostRequest {
  Post post = 1;
}

message AddPostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string post_id = 1;
}

message DeletePostResponse {
  bool success = 1;
}

message FetchFeedRequest {
  int32 num_posts = 1;
  string timestamp = 2;
}

message FetchFeedResponse {
  repeated Post posts = 1;
}

message FetchRecommendationsRequest {
  int32 num_posts = 1;
  string timestamp = 2;
}

message FetchRecommendationsResponse {
  repeated Post posts = 1;
}

message FetchUserPostsRequest {
  string user_id = 1;
  int32 num_posts = 2;
  string timestamp = 3;
}

message FetchUserPostsResponse {
  repeated Post posts = 1;
}

message UpdatePostRequest {
  Post post = 1;
}

message UpdatePostResponse {
  Post post = 1;
}

service PostService {
  rpc AddPost(AddPostRequest) returns (AddPostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc FetchFeed(FetchFeedRequest) returns (FetchFeedResponse);
  rpc FetchRecommendations(FetchRecommendationsRequest) returns (FetchRecommendationsResponse);
  rpc FetchUserPosts(FetchUserPostsRequest) returns (FetchUserPostsResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
}
